--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -92,7 +92,7 @@ jobs:
 
       matrix:
         version_branch: ['3.20']
-        version_minor_release: [0, 1, 2, 3, 4, 5, 6]
+        version_minor_release: [0, 1, 2, 3, 4, 5, 6, 7]
 
     steps:
       - name: Checkout out the codebase
@@ -391,7 +391,7 @@ jobs:
 
       matrix:
         version_branch: ['3.20']
-        version_minor_release: [0, 1, 2, 3, 4, 5, 6]
+        version_minor_release: [0, 1, 2, 3, 4, 5, 6, 7]
 
     steps:
       - name: Checkout out the codebase
