--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -116,7 +116,7 @@ jobs:
 
       matrix:
         version_branch: ['3.21']
-        version_minor_release: [0, 1, 2, 3]
+        version_minor_release: [0, 1, 2, 3, 4]
 
     steps:
       - name: Checkout out the codebase
@@ -465,7 +465,7 @@ jobs:
 
       matrix:
         version_branch: ['3.21']
-        version_minor_release: [0, 1, 2, 3]
+        version_minor_release: [0, 1, 2, 3, 4]
 
     steps:
       - name: Checkout out the codebase
