--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -65,7 +65,7 @@ jobs:
 
       matrix:
         version_branch: ['3.19']
-        version_minor_release: [0, 1, 2, 3, 4, 5, 6, 7, 8]
+        version_minor_release: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
 
     steps:
       - name: Checkout out the codebase
