--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,7 +20,7 @@ jobs:
 
       matrix:
         version_branch: ['3.20']
-        version_minor_release: [0, 1, 2, 3, 4, 5, 6, 7]
+        version_minor_release: [0, 1, 2, 3, 4, 5, 6, 7, 8]
 
     steps:
       - name: Checkout out the codebase
@@ -97,7 +97,7 @@ jobs:
 
       matrix:
         version_branch: ['3.20']
-        version_minor_release: [0, 1, 2, 3, 4, 5, 6, 7]
+        version_minor_release: [0, 1, 2, 3, 4, 5, 6, 7, 8]
 
     steps:
       - name: Checkout out the codebase
